tmux file typo corrected

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,4 +21,4 @@ bind-key v split-window -v
 bind-key h split-window -h
 
 #Easy config reload
-bind-key r source-file ~/.tumu.conf \; display-message "tmux.conf reloaded"
+bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
